--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -12,4 +12,4 @@
         = f.label :body, 'Answer'
         = f.text_field :body, class: 'form-control'
       .form-group
-        = f.submit 'Create answer'
+        = f.submit 'Create answer', class: 'btn btn-primary'
