--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,13 +25,13 @@ html lang="en"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand href="#"Qna
+          = link_to 'Qna', root_path, class: 'navbar-brand'
           .navbar-collapse.collapse.navbar-responsive-collapse
             ul.nav.navbar-nav
-              li= link_to "Link 1", "/path1"
-              li= link_to "Link 2", "/path2"
+              li= link_to 'Ask question', new_question_path
               - if user_signed_in?
                 li= link_to 'Sign out', destroy_user_session_path, method: :delete
+                li= link_to current_user.email, '#'
               - else
                 li= link_to 'Sign in', new_user_session_path
 
