delete answer spec and some else

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,7 +28,7 @@ html lang="en"
           = link_to 'Qna', root_path, class: 'navbar-brand'
           .navbar-collapse.collapse.navbar-responsive-collapse
             ul.nav.navbar-nav
-              li= link_to 'Ask question', new_question_path
+              li= link_to 'Question', new_question_path
               - if user_signed_in?
                 li= link_to 'Sign out', destroy_user_session_path, method: :delete
                 li= link_to current_user.email, '#'
