--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -1,8 +1,5 @@
-- if @question.invalid?
-  - @question.errors.full_messages.each do |error|
-    p= error
-
 = form_for @question do |f|
+  = render 'common/errors', resource: @question
   .form-group
     = f.label :title
     = f.text_field :title, class: 'form-control'
