--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -9,15 +9,13 @@
     h4 Answers
     ul.list-group
     - @question.answers.each do |answer|
-      - if answer.invalid?
-          - answer.errors.full_messages.each do |error|
-            p= error
       - if answer.persisted?
         li.list-group-item = answer.body
         - if current_user && current_user.author_of?(answer)
           = link_to 'Delete answer', answer, method: :delete
     - if user_signed_in?
       = form_for [@question, @answer] do |f|
+        = render 'common/errors', resource: @answer
         .form-group
           = f.label :body, 'Answer'
           = f.text_field :body, class: 'form-control'
