--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,2 @@
-$('.answers').html('<%= j render "questions/answers" %>');
+$('.answer').html('<%= j render "questions/answer", answer: @answer %>');
 $('#answer_body').val('');
