--- a/app/views/questions/_answers.html.slim
+++ b/app/views/questions/_answers.html.slim
@@ -1,6 +1,4 @@
 ul.list-group
   - @question.answers.each do |answer|
     - if answer.persisted?
-      li.list-group-item = answer.body
-      - if current_user && current_user.author_of?(answer)
-        = link_to 'Delete answer', answer, method: :delete
+      = render 'answer', answer: answer
