change class name to last-answer

--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,2 @@
-$('.answer').html('<%= j render "questions/answer", answer: @answer %>');
+$('.last-answer').html('<%= j render "questions/answer", answer: @answer %>');
 $('#answer_body').val('');
