--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -12,7 +12,7 @@
     - if user_signed_in?
       = form_for [@question, @answer], remote: true do |f|
         = render 'common/errors', resource: @answer
-        .answer
+        .last-answer
         .form-group
           = f.label :body, 'Answer'
           = f.text_area :body, class: 'form-control'
