add li with jquery

--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,2 @@
-$('.last-answer').html('<%= j render "questions/answer", answer: @answer %>');
+$('.answers').append('<%= j render "answers/answer", answer: @question.answers.last %>');
 $('#answer_body').val('');
