--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -8,11 +8,10 @@
       = link_to 'Delete question', @question, method: :delete, class: 'btn btn-primary'
     h4 Answers
     .answers
-      = render 'questions/answers'
+      = render @question.answers
     - if user_signed_in?
       = form_for [@question, @answer], remote: true do |f|
         = render 'common/errors', resource: @answer
-        .last-answer
         .form-group
           = f.label :body, 'Answer'
           = f.text_area :body, class: 'form-control'
