--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -1,2 +1,2 @@
-$('.answers').append('<%= j render "answers/answer", answer: @question.answers.last %>');
+$('.answers').append('<%= j render @answer %>');
 $('#answer_body').val('');
