--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -11,7 +11,7 @@
       = render @question.answers
     - if user_signed_in?
       = form_for [@question, @answer], remote: true do |f|
-        = render 'common/errors', resource: @answer
+        .answer-errors
         .form-group
           = f.label :body, 'Answer'
           = f.text_area :body, class: 'form-control'
