--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -1,3 +1,5 @@
 li.list-group-item = answer.body
 - if current_user && current_user.author_of?(answer)
-  = link_to 'Delete answer', answer, method: :delete
+  .delete-edit-answer
+    = link_to 'Delete answer', answer, method: :delete
+    = link_to 'Edit'
