--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -2,7 +2,8 @@ div id="answer-#{answer.id}"
   li.list-group-item = answer.body
   - if current_user && current_user.author_of?(answer)
     .delete-edit-answer
-      = link_to 'Delete answer', answer, method: :delete
+      = link_to 'Delete answer', answer,remote: true, method: :delete, class: 'delete-answer-link',
+        data: { answer_id: answer.id }
       '
       = link_to 'Edit', '', class: 'edit-answer-link', data: { answer_id: answer.id }
       = form_for answer, remote: true, html: { id: "edit-answer-#{answer.id}" } do |f|
