--- a/app/views/answers/create.js.erb
+++ b/app/views/answers/create.js.erb
@@ -3,6 +3,6 @@
     $('.answer-errors').html('<%= j message %>')
   <% end %>
 <% else %>
-  $('.answers').append('<%= j render @answer %>');
+  $('.answers-list').append('<%= j render @answer %>');
   $('#answer_body').val('');
 <% end %>
