--- a/app/views/answers/destroy.js.erb
+++ b/app/views/answers/destroy.js.erb
@@ -1,2 +1,1 @@
-$('.answers-list').html('<%= j render @answer.question.answers %>')
-$('.best-answer-bage').closest('div').prependTo('.answers-list')
+$('div#answer-<%= j @answer.id.to_s %>').remove();
