--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -7,4 +7,8 @@
     = f.label :body
     = f.text_area :body, class: 'form-control'
   .form-group
+    = f.fields_for :attachments do |a|
+      = a.label :file
+      = a.file_field :file
+  .form-group
     = f.submit 'Create queston', class: 'btn btn-primary'
