--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,6 +4,10 @@ div id="answer-#{answer.id}"
     - if answer.best
       span.badge.best-answer-bage The best answer
     = answer.body
+    p Attachments:
+    ul
+      - answer.attachments.each do |a|
+        li = link_to a.file.identifier, a.file.url
 
     .delete-edit-answer
       - if current_user && current_user.author_of?(answer.question)
