--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -23,8 +23,8 @@
       .question-attachments
         p Attachments:
         ul
-        - @question.attachments.each do |a|
-          li = link_to a.file.identifier, a.file.url
+          - @question.attachments.each do |a|
+            li = link_to a.file.identifier, a.file.url
     h4 Answers
     .answers
       ul.answers-list
@@ -35,5 +35,9 @@
         .form-group
           = f.label :body, 'Answer'
           = f.text_area :body, class: 'form-control'
+        .form-group
+          = f.fields_for :attachments do |a|
+            = a.label :file
+            = a.file_field :file
         .form-group
           = f.submit 'Create answer', class: 'btn btn-primary'
