--- a/app/views/questions/new.html.slim
+++ b/app/views/questions/new.html.slim
@@ -7,8 +7,10 @@
     = f.label :body
     = f.text_area :body, class: 'form-control'
   .form-group
+    / = render 'common/form_attachment', f: f
     = f.fields_for :attachments do |a|
-      = a.label :file
-      = a.file_field :file
+      = render 'common/attachment_fields', f: a
+      .links
+        = link_to_add_association 'add file', f, :attachments, partial: 'common/attachment_fields'
   .form-group
     = f.submit 'Create queston', class: 'btn btn-primary'
