--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -5,6 +5,8 @@
     .question
       .question-body
         = @question.body
+      .question-attachments
+        = render 'common/attachments', resource: @question
       - if current_user && current_user.author_of?(@question)
         .edit-delete
           = link_to 'Edit question', '', class: 'edit-question-link',
@@ -19,12 +21,10 @@
               = f.label :body, 'Question body'
               = f.text_area :body, class: 'form-control'
             .form-group
+              = render 'common/form_attachment', f: f
+            .form-group
               = f.submit 'Save question', class: 'btn btn-primary', id: 'question-update-submit'
-      .question-attachments
-        p Attachments:
-        ul
-          - @question.attachments.each do |a|
-            li = link_to a.file.identifier, a.file.url
+
     h4 Answers
     .answers
       ul.answers-list
@@ -36,8 +36,9 @@
           = f.label :body, 'Answer'
           = f.text_area :body, class: 'form-control'
         .form-group
-          = f.fields_for :attachments do |a|
-            = a.label :file
-            = a.file_field :file
+          = render 'common/form_attachment', f: f
+          / = f.fields_for :attachments do |a|
+          /   = a.label :file
+          /   = a.file_field :file
         .form-group
           = f.submit 'Create answer', class: 'btn btn-primary'
