--- a/app/views/common/_form_attachment.html.slim
+++ b/app/views/common/_form_attachment.html.slim
@@ -1,4 +1,4 @@
 = f.fields_for :attachments do |a|
-  = a.label :file
-  = a.file_field :file
-  
+  .nested-fields
+    = a.label :file
+    = a.file_field :file
