--- a/app/views/common/_attachment_fields.html.slim
+++ b/app/views/common/_attachment_fields.html.slim
@@ -3,4 +3,4 @@
     = f.label :file
   .field
     = f.file_field :file
-= link_to_remove_association('remove file', f, { wrapper_class: 'nested-fields' })
+= link_to_remove_association('remove filee', f)
