--- a/app/views/common/_attachments.html.slim
+++ b/app/views/common/_attachments.html.slim
@@ -1,3 +1,6 @@
 p Attachments:
 - resource.attachments.each do |a|
-  li = link_to a.file.identifier, a.file.url
+  div id="attachment-#{a.id}"
+    li = link_to a.file.identifier, a.file.url
+    - if current_user.author_of?(resource)
+      = link_to 'delete file', a, remote: true, method: :delete
