--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -22,6 +22,9 @@ div id="answer-#{answer.id}"
             = f.label :body, 'Answer'
             = f.text_area :body, class: 'form-control'
           .form-group
-            = render 'common/form_attachment', f: f
+            = f.fields_for :attachments do |a|
+              = render 'common/attachment_fields', f: a
+            .links
+              = link_to_add_association 'add file', f, :attachments, partial: 'common/attachment_fields'
           .form-group
             = f.submit 'Save', class: 'btn btn-primary'
