--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -4,6 +4,13 @@ div id="answer-#{answer.id}"
     - if answer.best
       span.badge.best-answer-bage The best answer
     = answer.body
+    - if current_user && !current_user.author_of?(answer)
+      <span class = "pull-right like-badge", id = "vote-answer-#{answer.id}">
+        - if answer.votes.first
+          | You've #{answer.votes.first.value}d it
+      </span>
+    .vote
+      = render 'common/vote', resource: answer, vote: answer.votes.first
     ul.answer-attachments
       = render 'common/attachments', resource: answer
 
