--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,7 +1,7 @@
 = question.body
 - if current_user && !current_user.author_of?(question)
 <span class = "pull-right like-badge", id = "vote-question-#{question.id}">
-  - if vote
+  - if vote && current_user.author_of?(vote)
     | You've #{vote.value}d it
 </span>
 .vote
