--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,11 +1,9 @@
-<div id = "rate-question-#{question.id}">
+div id="rate-question-#{question.id}"
   = question.rating
-</div>
 = question.body
 - if current_user && !current_user.author_of?(question)
-<span class = "pull-right like-badge", id = "vote-question-#{question.id}">
+span class="pull-right like-badge" id="vote-question-#{question.id}"
   - if vote && current_user.author_of?(vote)
-    | You've #{vote.value}d it
-</span>
+    | You've #{Vote.show(vote.value)}d it
 .vote
   = render 'common/vote', resource: question, vote: vote
