--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -1,9 +1,8 @@
 div id="rate-question-#{question.id}"
   = question.rating
 = question.body
-- if current_user && !current_user.author_of?(question)
 span class="pull-right like-badge" id="vote-question-#{question.id}"
-  - if vote && current_user.author_of?(vote)
-    | You've #{Vote.show(vote.value)}d it
+- if current_user && question.vote(current_user)
+  | You've #{Vote.show(question.vote(current_user).value)}d it
 .vote
-  = render 'common/vote', resource: question, vote: vote
+  = render 'common/vote', resource: question, vote: question.vote(current_user)
