--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -2,7 +2,7 @@ div id="rate-question-#{question.id}"
   = question.rating
 = question.body
 span class="pull-right like-badge" id="vote-question-#{question.id}"
-- if current_user && question.vote(current_user)
-  | You've #{Vote.show(question.vote(current_user).value)}d it
+  - if current_user && vote
+    | You've #{vote&.show(vote.value)}d it
 .vote
-  = render 'common/vote', resource: question, vote: question.vote(current_user)
+  = render 'common/vote', resource: question, vote: vote
