--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -7,7 +7,7 @@ div id="answer-#{answer.id}"
     = answer.body
     span class="pull-right like-badge" id="vote-answer-#{answer.id}"
       - if current_user && vote(answer)
-        | You've #{vote(answer)&.show(vote(answer).value)}d it
+        | You've #{vote(answer)&.show_value}d it
     .vote
       = render 'common/vote', resource: answer, vote: vote(answer)
     ul.answer-attachments
