--- a/app/views/questions/_question.html.slim
+++ b/app/views/questions/_question.html.slim
@@ -3,6 +3,6 @@ div id="rate-question-#{question.id}"
 = question.body
 span class="pull-right like-badge" id="vote-question-#{question.id}"
   - if current_user && vote
-    | You've #{vote&.show_value}d it
+    | You've #{vote.show_value}d it
 .vote
   = render 'common/vote', resource: question, vote: vote
