--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -8,35 +8,36 @@
       ul.question-attachments
         = render 'common/attachments', resource: @question
       - if current_user && current_user.author_of?(@question)
-      ul class="question-#{@question.id}-comments-list"
-        = render 'common/comments', resource: @question
-        = link_to 'New comment', '', class: 'new-question-comment-link'
-        = form_for [@question, @comment], remote: true,
-          html: { id: 'question-comment', style: 'display: none' } do |f|
-          .form-group
-            = f.label :body, 'Comment body'
-            = f.text_area :body, class: 'form-control'
-          .form-group
-            = f.submit 'Save comment', class: 'btn btn-primary', id: 'question-comment-submit'
-        .edit-delete
-          = link_to 'Edit question', '', class: 'edit-question-link',
-            data: { question_id: @question.id }
-          '
-          = link_to 'Delete question', @question, method: :delete
-          = form_for @question, remote: true, html: { id: 'edit-question' } do |f|
+      .comments
+        ul class="question-#{@question.id}-comments-list"
+          = render 'common/comments', resource: @question
+          = link_to 'New comment', '', class: 'new-question-comment-link'
+          = form_for [@question, @comment], remote: true,
+            html: { id: 'question-comment', style: 'display: none' } do |f|
             .form-group
-              = f.label :title, 'Question tilte'
-              = f.text_field :title, class: 'form-control'
-            .form-group
-              = f.label :body, 'Question body'
+              = f.label :body, 'Comment body'
               = f.text_area :body, class: 'form-control'
             .form-group
-              = f.fields_for :attachments do |a|
-                = render 'common/attachment_fields', f: a
-              .links
-                = link_to_add_association 'add file', f, :attachments, partial: 'common/attachment_fields'
-            .form-group
-              = f.submit 'Save question', class: 'btn btn-primary', id: 'question-update-submit'
+              = f.submit 'Save comment', class: 'btn btn-primary', id: 'question-comment-submit'
+      .edit-delete
+        = link_to 'Edit question', '', class: 'edit-question-link',
+          data: { question_id: @question.id }
+        '
+        = link_to 'Delete question', @question, method: :delete
+        = form_for @question, remote: true, html: { id: 'edit-question' } do |f|
+          .form-group
+            = f.label :title, 'Question tilte'
+            = f.text_field :title, class: 'form-control'
+          .form-group
+            = f.label :body, 'Question body'
+            = f.text_area :body, class: 'form-control'
+          .form-group
+            = f.fields_for :attachments do |a|
+              = render 'common/attachment_fields', f: a
+            .links
+              = link_to_add_association 'add file', f, :attachments, partial: 'common/attachment_fields'
+          .form-group
+            = f.submit 'Save question', class: 'btn btn-primary', id: 'question-update-submit'
 
     h4 Answers
     .answers
