--- a/app/views/common/_comments.html.slim
+++ b/app/views/common/_comments.html.slim
@@ -2,7 +2,8 @@
   p Comments:
   - resource.comments.each do |comment|
     - if comment.persisted?
-      li.well.list-group-item
+      li class='well list-group-item' id="question-comment-#{comment.id}"
         = comment.body
-      - if current_user.author_of?(comment)
-        = link_to 'Delete comment', [resource, comment], method: :delete
+        .comment-delete
+          - if current_user && current_user.author_of?(comment)
+            = link_to 'Delete comment', comment, method: :delete, remote: true
