--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -2,7 +2,7 @@
   .panel-heading
     = @question.title
   .panel-body
-    .question data-id="#{@question.id}"
+    div class="question" data-id="#{@question.id}" id="question-#{@question.id}"
       .question-body
         = render @question, vote: @question_vote
       ul.question-attachments
@@ -10,15 +10,7 @@
       .comments
         ul class="question-#{@question.id}-comments-list list-group"
           = render 'common/comments', resource: @question
-        - if current_user
-          = link_to 'New comment', '', class: 'new-question-comment-link'
-          = form_for [@question, @comment], remote: true,
-            html: { id: 'question-comment', style: 'display: none' } do |f|
-            .form-group
-              = f.label :body, 'Comment body'
-              = f.text_area :body, class: 'form-control'
-            .form-group
-              = f.submit 'Save comment', class: 'btn btn-primary', id: 'question-comment-submit'
+        = render 'comments/comment_form', resource: @question, resource_name: 'question', comment: @comment
       - if current_user && current_user.author_of?(@question)
         .edit-delete
         = link_to 'Edit question', '', class: 'edit-question-link',
