finish answer comments

--- a/app/views/comments/_comment_form.html.slim
+++ b/app/views/comments/_comment_form.html.slim
@@ -1,7 +1,8 @@
 - if current_user
-  = link_to 'New comment', '', class: "new-#{resource_name}-comment-link", data: { "#{resource_name}_id" => resource.id }
-  = form_for [resource, comment], remote: true,
-    html: { id: "#{resource_name}-#{resource.id}-comment", style: 'display: none' } do |f|
+  = link_to 'New comment', '', class: "new-#{resource_name}-comment-link",
+    id: "#{resource_name}-#{resource.id}-comment-link", data: { "#{resource_name}_id" => resource.id }
+  = form_for [resource, resource.comments.new],
+    remote: true, html: { id: "#{resource_name}-#{resource.id}-comment", style: 'display: none' } do |f|
     .form-group
       = f.label :body, 'Comment body'
       = f.text_area :body, class: 'form-control'
