--- a/app/views/users/email.html.slim
+++ b/app/views/users/email.html.slim
@@ -1,4 +1,4 @@
-h3 #{session[:oauth]["provider"].capitalize} did not provide your email, pleas enter it:
+p #{session[:oauth].symbolize_keys![:provider].capitalize} did not provide your email, please enter it:
 = form_tag new_user_email_path do
   .form-group
     = email_field_tag :email, '', class: 'form-control'
