--- a/app/views/answers/_answer.html.slim
+++ b/app/views/answers/_answer.html.slim
@@ -17,11 +17,11 @@ div class='answer' id="answer-#{answer.id}" data-id="#{answer.id}"
         = render 'common/comments', resource: answer
     = render 'comments/comment_form', resource: answer, resource_name: 'answer', comment: @comment
     .delete-edit-answer
-      - if current_user && current_user.author_of?(answer.question)
+      - if can? :set_best, answer
         = link_to 'The best', set_best_answer_path(answer), remote: true, method: :patch,
           class: 'best-answer-link'
       '
-      - if current_user && current_user.author_of?(answer)
+      - if can? :destroy, answer
         = link_to 'Delete answer', answer, remote: true, method: :delete, class: 'delete-answer-link',
           data: { answer_id: answer.id }
         '
