--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -11,7 +11,7 @@
         ul class="question-#{@question.id}-comments-list list-group"
           = render 'common/comments', resource: @question
         = render 'comments/comment_form', resource: @question, resource_name: 'question'
-      - if current_user && current_user.author_of?(@question)
+      - if can? :destroy, @question
         .edit-delete
         = link_to 'Edit question', '', class: 'edit-question-link',
           data: { question_id: @question.id }
