--- a/app/views/daily_mailer/digest.html.slim
+++ b/app/views/daily_mailer/digest.html.slim
@@ -1,5 +1,5 @@
 h1 Daily#digest
-p = @greeting + ", this is a list of questions for the last day"
+p = "Hi, this is a list of questions for the last day"
 
 ul
   - @questions.each do |question|
