--- a/app/views/answer_mailer/notify.html.slim
+++ b/app/views/answer_mailer/notify.html.slim
@@ -1,3 +1,3 @@
 h1 Answer#notify
-p = @greeting + ", the question #{@answer.question.title} has new answer"
-= link_to @answer.question.title, question_url(@answer.question)
+p = "Hi, the question #{@title} has new answer"
+= link_to @title, question_url(@question)
